[package]
name = "PebbleVault-Server"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
rustyline = "14.0.0"
PebbleVault = { path = "./PebbleVault" }
colored = "2.0.0"
chrono = "0.4.19"
lazy_static = "1.5.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "create_db"
path = "src/commands/create_db.rs"

[[bin]]
name = "close_db"
path = "src/commands/close_db.rs"

[[bin]]
name = "set_object"
path = "src/commands/set_object.rs"

[[bin]]
name = "get_object"
path = "src/commands/get_object.rs"

[[bin]]
name = "greet"
path = "src/commands/greet.rs"

[[bin]]
name = "history"
path = "src/commands/history.rs"

# Add more [[bin]] entries for each command you want to include